# OraculoBOT

./: .coverage  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  agent.py  analyze_rag_metadata.py  analyze_rag_tables.py  bot.py  check_embedding_format.py  check_vector_extension.py  config.py  crabbit.txt  discover_tables.py  explore_supabase.py  monitor_bot.py  prd.json  pyproject.toml  pytest.ini  repomix-output.xml  setup_rag.sh  test_full_rag_flow.py  test_gemini_setup.py  test_rag_db_connection.py  test_rag_integration.py  test_rag_retriever.py  test_rag_simulated_message.py  test_rag_vector_search.py  test_simple_vector_search.py  test_vector_search.py  views.py
.omc/: progress.txt  project-memory.json
.omc/plans/: open-questions.md  supabase-integration.md
.omc/sessions/: 27d016b0-99b8-43e1-86dd-715002a89633.json  2bebd029-671a-43bb-8e9d-e712b1d91f21.json  2e50bef7-31ac-4df8-984b-82b5d3233b1d.json  36e37654-b137-4140-a1d3-8662e2256a42.json  7e0ae01a-8442-4d98-8b8d-f3a5683afd6e.json
docs/: AGENTS.md  E2E_TESTING.md  GEMINI_SETUP.md  RAG_GEMINI_IMPLEMENTATION.md  RAG_INTEGRATION.md  RAG_JURIDICO_SELFHOSTED.md  RAG_LOTE1_CLASSIFICACAO_OPERACIONAL.md  RAG_LOTE1_PASSO3_ESTRATEGIA_INGESTAO.md  RAG_LOTE1_PASSO4_PLANO_TECNICO_EXECUTAVEL.md  RAG_LOTE1_PASSO5_ESPECIFICACAO_IMPLEMENTACAO.md
docs/RAG_LOTE1/: AGENTS.md  IMPLEMENTATION_STATUS.md  README.md  (+5 more)
migrations/: 001_rag_lote1_ingestion_schema.sql
oraculo_bot/: AGENTS.md  __init__.py  __main__.py  agent.py  bot.py  config.py  db.py  models.py  rag.py  rag_retriever.py  views.py
scripts/: AGENTS.md  test_e2e_manual.py
tests/: AGENTS.md  __init__.py  conftest.py
(+24 files in other folders)
